# faddeeva_fortran

./: .gitignore  CMakeLists.txt  README.md  example.f90  license.txt  main  main.f90  reference_data.f90
Faddeeva_package/: CMakeLists.txt
Faddeeva_package/src/lib/: faddeeva_fortran_interface.f90
Faddeeva_package/src/tests/: CMakeLists.txt
errfun_MIT/: CMakeLists.txt
errfun_MIT/src/lib/: CMakeLists.txt  errfun.f90  faddeeva_fortran_interface.f90
errfun_MIT/src/tests/: CMakeLists.txt  Faddeeva_dawson_test.f90  Faddeeva_erf_test.f90  Faddeeva_erfcx_test.f90  Faddeeva_erfi_test.f90  Faddeeva_w_test.f90
src/lib/: CMakeLists.txt  faddeeva_fortran_interface.f90
src/tests/: CMakeLists.txt
